--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "lint": "next lint",
-        "export": "next build && next export"
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
     },
     "dependencies": {
         "next": "12.1.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "sass": "^1.49.9"
+        "sass": "^1.49.9",
+        "sharp": "^0.30.4"
     },
     "devDependencies": {
         "eslint": "8.11.0",
